Added MariaDB 10.x Auto-Installer + minor updates
MariaDB 10.x Auto-Installer added, updated comments in NGINX and PHP
Auto-Installers and configuration files.

--- a/nginx/examples/php/php.conf
+++ b/nginx/examples/php/php.conf
@@ -6,10 +6,39 @@ server
 
     root /home/nginx/htdocs/public;
 
+    #+------------------------------------------------------------------------+
+    #+ This location block is currently setup to work with most CMS's -- such
+    #+ as WordPress. If this doesn't work for your CMS, generally you'll only
+    #+ need to change $args. Your CMS should be able to provide details as to
+    #+ what you need to swap it to.
+    #+------------------------------------------------------------------------+
+
     location /
     {
         try_files $uri $uri/ /index.php?$args;
     }
+
+    #+------------------------------------------------------------------------+
+    #+ By default, when PHP is installed using a package manager, sockets are
+    #+ used instead of TCP. If you wish to use TCP connections, you'll need to
+    #+ modify your pool.d configuration file which can generally be found in:
+    #+
+    #+ /etc/php/-version-/fpm/pool.d
+    #+
+    #+ Where -version- is your active PHP version (i.e. 5.6, 7.0, 7.1, etc).
+    #+ You'll need to find this line (version dependent):
+    #+
+    #+ listen = /run/php/php7.1-fpm.sock
+    #+
+    #+ and change it to:
+    #+
+    #+ listen = 127.0.0.1:9000
+    #+
+    #+ You'll then need to save the file and restart php-fpm. Alternatively,
+    #+ you can chance fastcgi_pass 127.0.0.1:9000; to:
+    #+
+    #+ fastcgi_pass unix:/run/php/php7.1-fpm.sock
+    #+------------------------------------------------------------------------+
 
     location ~ [^/]\.php(/|$) {
         fastcgi_split_path_info ^(.+?\.php)(/.*)$;
