--- a/nginx/examples/proxy/proxy.conf
+++ b/nginx/examples/proxy/proxy.conf
@@ -1,3 +1,12 @@
+#+----------------------------------------------------------------------------+
+#+ Using NGINX as a reverse proxy is beneficial, for example, when running a
+#+ NodeJS application that's only accessible on a higher, non-standard port.
+#+
+#+ So that you don't have to add the port to the end of the URI, you can use
+#+ NGINX as a reverse proxy and accept incoming requests on port 80 like you
+#+ would normally and when a request comes though, NGINX will proxy it over
+#+ to your application.
+#+----------------------------------------------------------------------------+
 upstream @backend {
     server http://127.0.0.1:8080;
 }
