Added NAXSI, Google Pagespeed, Minor Updates
NAXSI and Google Pagespeed added to compiled modules for NGINX.
Additionally, changes were made to the PHP Auto-Installer (removed
quotes from package variable). Added load balancing examples.

--- a/nginx/examples/lb/lb-iphash.conf
+++ b/nginx/examples/lb/lb-iphash.conf
@@ -17,7 +17,7 @@ server
 
     location /
     {
-        proxy_pass @backend;
+        proxy_pass http://@backend;
         include /etc/nginx/config/proxy/proxy.conf;
     }
 }
